--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <title>HTML Images</title>
     </head>
     <body>
-      
+      <img src="https://en.wikipedia.org/wiki/Jeet_Kune_Do#/media/File:JeetKuneDo.svg">
 
     </body>
   </html>
