--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     </head>
     <body>
       <img src="https://en.wikipedia.org/wiki/Jeet_Kune_Do#/media/File:JeetKuneDo.svg">
-
+      <img src="https://en.wikipedia.org/wiki/Jeet_Kune_Do#/media/File:JeetKuneDo.svg" alt="Jeet Kune Do Symbol">
+      <img src="https://en.wikipedia.org/wiki/Jeet_Kune_Do#/media/File:JeetKuneDo.svg" alt="Jeet Kune Do Symbol" title="Jeet Kune Do">
     </body>
   </html>
